      + When there is no -v, extract the patch series with the highest
        reroll count that we see.
    - New --trailers and --cover-letter-trailers features (Closes: #951211).
      + --trailers is on by default; use --no-trailers to disable.
    - Stop outputting message subjects on standard error.
  * New dependencies on liblist-moreutils-perl, libmail-box-perl.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 15 Feb 2020 09:06:56 -0700

mailscripts (0.17-1) unstable; urgency=medium

  * email-print-mime-structure: pass --disable-dirmngr to gpgsm and drop
    <!nocheck> build-dep on dirmngr (Closes: #946111).
    Thanks to Daniel Kahn Gillmor for a patch.
  * New script: imap-dl (Closes: #940461).
    Thanks to Daniel Kahn Gillmor and Jameson Rollins for the patch, and
    others for testing out the new tool.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 14 Feb 2020 10:37:02 -0700

mailscripts (0.16-1) unstable; urgency=medium

  email-print-mime-structure:
  * Add a test suite (Closes: #945451).
    - Add <!nocheck> builddeps on
      + python3
      + python3-pgpy
      + gpg
      + gpg-agent
      + mypy.
  * Add capability to decrypt S/MIME-encrypted messages (Closes: #945195).
    - Add gpgsm, openssl to Build-Depends and Suggests.
    - Add <!nocheck> build-dep on dirmngr.
  * Add capability to handle one-part PKCS#7 signature objects.
    - Add gnutls-bin to Build-Depends and Suggests.
  * Fully decode encrypted parts before passing to any decryption
    mechanism.
    See <https://bugs.debian.org/945195#100>.

    Thanks to Daniel Kahn Gillmor for two patch series implementing these
    improvements.

 -- Sean Whitton <spwhitton@spwhitton.name>  Thu, 28 Nov 2019 11:27:38 -0700

mailscripts (0.15-1) unstable; urgency=medium

  * notmuch-extract-patch: when checking the reroll count, do not require
    that '[PATCH nn/mm]' appear right at the beginning of the subject.
  * notmuch-extract-patch: strip text in Subject: before '[PATCH nn/mm]'